--- a/examples/html5/index.html
+++ b/examples/html5/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Html-Qrcode Demo</title>
 <body>
     <div id="qr-reader" style="width:500px"></div>
     <div id="qr-reader-results"></div>
 </body>
-<script src="/html5-qrcode.min.js"></script>
+<script src="../../minified/html5-qrcode.min.js"></script>
 <script>
     function docReady(fn) {
         // see if DOM is already available
